@@ -120,6 +120,7 @@ QString About::getTranslators() {
          trad(tr("Hebrew"), "Genghis Khan <genghiskhan@gmx.ca>") +
          trad(tr("Portuguese (Brazil)"), QString::fromUtf8("Maico Sertório (transifex)")) +
          trad(tr("Ukrainian"), "zubr139 (transifex)") +
+         trad(tr("Norwegian Nynorsk"), "bjorni (transifex)") +
          "");
 }
 
