@@ -66,7 +66,8 @@ TRANSLATIONS = translations/smtube_es.ts \
                translations/smtube_el.ts \
                translations/smtube_he_IL.ts \
                translations/smtube_pt_BR.ts \
-               translations/smtube_uk.ts
+               translations/smtube_uk.ts \
+               translations/smtube_nn_NO.ts
 
 
 # qtsingleapplication
