@@ -1,0 +1,557 @@
+<?xml version="1.0" ?><!DOCTYPE TS><TS language="nn_NO" version="2.0">
+<context>
+    <name>About</name>
+    <message>
+        <location filename="../about.ui" line="14"/>
+        <source>About...</source>
+        <translation>Om …</translation>
+    </message>
+    <message>
+        <location filename="../about.ui" line="33"/>
+        <source>&amp;Info</source>
+        <translation>&amp;Info</translation>
+    </message>
+    <message>
+        <location filename="../about.ui" line="53"/>
+        <location filename="../about.ui" line="109"/>
+        <location filename="../about.ui" line="165"/>
+        <source>icon</source>
+        <translation>ikon</translation>
+    </message>
+    <message>
+        <location filename="../about.ui" line="89"/>
+        <source>&amp;Translators</source>
+        <translation>&amp;Omsettarar</translation>
+    </message>
+    <message>
+        <location filename="../about.ui" line="145"/>
+        <source>&amp;License</source>
+        <translation>&amp;Lisens</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="33"/>
+        <source>YouTube%1 Browser for SMPlayer</source>
+        <translation>YouTube%1-lesar for SMPlayer</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="35"/>
+        <source>Based on UMPlayer</source>
+        <translation>Basert på UMPlayer</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="37"/>
+        <source>Version: %1</source>
+        <translation>Versjon: %1</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="39"/>
+        <source>Portable Edition</source>
+        <translation>Portabel utgåve</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="42"/>
+        <source>Compiled with Qt %1 (using %2)</source>
+        <translation>Kompilert med Qt %1 (ved hjelp av %2)</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="44"/>
+        <source>Visit our web for updates:</source>
+        <translation>Gå til nettsida vår for oppdateringar:</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="107"/>
+        <source>The following people have contributed with translations:</source>
+        <translation>Følgjande personar har hjelpt til med omsettingar:</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="109"/>
+        <source>Spanish</source>
+        <translation>Spansk</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="110"/>
+        <source>Russian</source>
+        <translation>Russisk</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="111"/>
+        <source>Lithuanian</source>
+        <translation>Litauisk</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="112"/>
+        <source>Japanese</source>
+        <translation>Japansk</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="113"/>
+        <source>Simplified-Chinese</source>
+        <translation>Forenkla kinesisk</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="114"/>
+        <source>Basque</source>
+        <translation>Baskisk</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="115"/>
+        <source>Portuguese</source>
+        <translation>Portugisisk</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="116"/>
+        <source>Hungarian</source>
+        <translation>Ungarsk</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="117"/>
+        <source>Polish</source>
+        <translation>Polsk</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="119"/>
+        <source>Greek</source>
+        <translation>Gresk</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="120"/>
+        <source>Hebrew</source>
+        <translation>Hebraisk</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="144"/>
+        <source>&lt;b&gt;%1&lt;/b&gt; (%2)</source>
+        <translation>&lt;b&gt;%1&lt;/b&gt; (%2)</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="118"/>
+        <source>Galician</source>
+        <translation>Galisisk</translation>
+    </message>
+    <message>
+        <location filename="../about.ui" line="201"/>
+        <source>&amp;Youtube</source>
+        <translation>&amp;Youtube</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="63"/>
+        <source>Founded in February 2005, YouTube&amp;trade; is the world&apos;s most popular online video community, allowing millions of people to discover, watch and share originally-created videos. YouTube&amp;trade; provides a forum for people to connect, inform, and inspire others across the globe and acts as a distribution platform for original content creators and advertisers large and small.</source>
+        <translation>Grunnlagt i februar 2005, er YouTube&amp;trade; verdas mest populære online video fellesskap, som gjer det muleg for millionar av menneske å oppdage, sjå og dele originale videoar. YouTube&amp;trade; tilbyr eit forum sder det er muleg for folk å kople til, informere og inspirere andre rundt om i verda og fungerer som ei distribusjonsplattform for skaparar av originalt innhald og for store og små annonsørar.</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="69"/>
+        <source>By using this application you hereby agree to be bound by Google Terms of Services located at %1.</source>
+        <translation>Ved å bruke dette programmet seier du deg med dette samd i og bind deg til Google sine tenestevilkår som du finn på %1.</translation>
+    </message>
+</context>
+<context>
+    <name>ConfigDialog</name>
+    <message>
+        <location filename="../configdialog.ui" line="14"/>
+        <source>Settings</source>
+        <translation>Innstillingar</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="20"/>
+        <source>Recording</source>
+        <translation>Opptak</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="28"/>
+        <source>&amp;Save to this folder</source>
+        <translation>&amp;Lagre til denne mappa</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="45"/>
+        <source>&amp;Quality</source>
+        <translation>&amp;Kvalitet</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="59"/>
+        <location filename="../configdialog.cpp" line="117"/>
+        <source>Normal (360p)</source>
+        <translation>Normal (360p)</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="64"/>
+        <location filename="../configdialog.cpp" line="117"/>
+        <source>HD (720p)</source>
+        <translation>HD (720p)</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="69"/>
+        <location filename="../configdialog.cpp" line="117"/>
+        <source>Full HD (1080p)</source>
+        <translation>Full HD (1080p)</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="90"/>
+        <source>&amp;Format</source>
+        <translation>&amp;Format</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="101"/>
+        <source>MP4</source>
+        <translation>MP4</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="106"/>
+        <source>Flv</source>
+        <translation>Flv</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="132"/>
+        <source>Playback</source>
+        <translation>Avspeling</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="140"/>
+        <source>&amp;Player:</source>
+        <translation>&amp;Spelar:</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.cpp" line="131"/>
+        <source>Low Quality (226p)</source>
+        <translation>Låg kvalitet (226p)</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.cpp" line="131"/>
+        <source>Medium Quality (360p)</source>
+        <translation>Medium kvalitet (360p)</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.cpp" line="131"/>
+        <source>High Quality (480p)</source>
+        <translation>Høg kvalitet (480p)</translation>
+    </message>
+</context>
+<context>
+    <name>DownloadFile</name>
+    <message>
+        <location filename="../downloadfile.cpp" line="115"/>
+        <source>%1 hours</source>
+        <translation>%1 timar</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="121"/>
+        <source>%1 minutes</source>
+        <translation>%1 minutt</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="108"/>
+        <source>unknown time remaining</source>
+        <translation>ukjend tid står att</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="124"/>
+        <source>%1 seconds</source>
+        <translation>%1 sekund</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="125"/>
+        <source>%1 remaining</source>
+        <translation>%1 er att</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="130"/>
+        <source>%1 of %2 MB</source>
+        <translation>%1 av %2 MB</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="136"/>
+        <source>%1 of %2 KB</source>
+        <translation>%1 av %2 KB</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="142"/>
+        <source>%1 of %2 bytes</source>
+        <translation>%1 av %2 byte</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="146"/>
+        <source>%1 of unknown size</source>
+        <translation>%1 av ukjend størrelse</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="151"/>
+        <source>%1 MB/sec</source>
+        <translation>%1 MB/sek</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="155"/>
+        <source>%1 KB/sec</source>
+        <translation>%1 KB/sek</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="159"/>
+        <source>%1 bytes/sec</source>
+        <translation>%1 byte/sek</translation>
+    </message>
+</context>
+<context>
+    <name>FileChooser</name>
+    <message>
+        <location filename="../filechooser.cpp" line="54"/>
+        <source>Click to select a file or folder</source>
+        <translation>Klikk for å velje ei fil eller mappe</translation>
+    </message>
+</context>
+<context>
+    <name>RecordingDelegate</name>
+    <message>
+        <location filename="../recordingdialog.cpp" line="120"/>
+        <source>Canceled</source>
+        <translation>Avbrote</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="120"/>
+        <source>Error</source>
+        <translation>Feil</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="150"/>
+        <source>%1 MB</source>
+        <translation>%1 MB</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="154"/>
+        <source>%1 KB</source>
+        <translation>%1 KB</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="158"/>
+        <source>%1 bytes</source>
+        <translation>%1 byte</translation>
+    </message>
+</context>
+<context>
+    <name>RecordingDialog</name>
+    <message>
+        <location filename="../recordingdialog.cpp" line="204"/>
+        <location filename="../recordingdialog.cpp" line="417"/>
+        <source>Recordings</source>
+        <translation>Innspelingar</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="205"/>
+        <source>&amp;Clear list</source>
+        <translation>&amp;Tøm liste</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="206"/>
+        <location filename="../recordingdialog.cpp" line="546"/>
+        <source>&amp;Open folder</source>
+        <translation>&amp;Opne mappe</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="287"/>
+        <location filename="../recordingdialog.cpp" line="682"/>
+        <source>There was an error in retrieving the download URL.</source>
+        <translation>Feil under henting av nedlastings URL-en</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="287"/>
+        <location filename="../recordingdialog.cpp" line="682"/>
+        <source>Recording failed</source>
+        <translation>Mislykka opptak</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="305"/>
+        <location filename="../recordingdialog.cpp" line="700"/>
+        <source>Starting</source>
+        <translation>Startar</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="338"/>
+        <source>Error</source>
+        <translation>Feil</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="342"/>
+        <source>Completed</source>
+        <translation>Fullført</translation>
+    </message>
+    <message numerus="yes">
+        <location filename="../recordingdialog.cpp" line="421"/>
+        <source>%1% of %n video - Recordings</source>
+        <translation><numerusform>%1% av %n video - Opptak</numerusform><numerusform>%1% av %n videar - Opptak</numerusform></translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="506"/>
+        <source>&amp;Cancel</source>
+        <translation>&amp;Avbryt</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="508"/>
+        <source>&amp;Remove from list</source>
+        <translation>&amp;Fjern frå liste</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="527"/>
+        <location filename="../recordingdialog.cpp" line="549"/>
+        <source>Remove from &amp;list</source>
+        <translation>Fjern frå &amp;liste</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="525"/>
+        <source>&amp;Retry</source>
+        <translation>&amp;Prøv igjen</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="545"/>
+        <source>&amp;Play</source>
+        <translation>&amp;Spel</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="548"/>
+        <source>&amp;Delete</source>
+        <translation>&amp;Slett</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="627"/>
+        <source>Fetching URL...</source>
+        <translation>Hentar URL …</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="642"/>
+        <source>File error</source>
+        <translation>Filfeil</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="643"/>
+        <source>The file does not exists, would you like to remove it from the list?</source>
+        <translation>Fila finst ikkje. Vil du fjerne henne frå lista?</translation>
+    </message>
+</context>
+<context>
+    <name>YTDelegate</name>
+    <message>
+        <location filename="../ytdelegate.cpp" line="113"/>
+        <source>%L1 views</source>
+        <translation>%L1 visingar</translation>
+    </message>
+</context>
+<context>
+    <name>YTDialog</name>
+    <message>
+        <location filename="../ytdialog.cpp" line="210"/>
+        <source>YouTube Browser - SMPlayer</source>
+        <translation>YouTube-lesar - SMPlayer</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="258"/>
+        <source>Settings</source>
+        <translation>Innstillingar</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="264"/>
+        <source>Information</source>
+        <translation>Informasjon</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="270"/>
+        <source>Show recordings</source>
+        <translation>Vis opptak</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="435"/>
+        <source>Most Relevant</source>
+        <translation>Mest relevant</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="439"/>
+        <source>Most Recent</source>
+        <translation>Siste</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="443"/>
+        <source>Most Viewed</source>
+        <translation>Mest sette</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="447"/>
+        <source>Most Popular</source>
+        <translation>Mest populære</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="451"/>
+        <source>Recently Featured</source>
+        <translation type="unfinished"/>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="455"/>
+        <source>Most Rated</source>
+        <translation>Mest vurderte</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="466"/>
+        <source>Most popular videos on YouTube%1</source>
+        <translation>Mest populære videoar på YouTube%1</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="467"/>
+        <source>Most rated videos on YouTube%1</source>
+        <translation>Mest vurderte videoar YouTube%1</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="587"/>
+        <source>Error: Could not connect to Youtube server.</source>
+        <translation>Feil: Klarte ikkje å kople til Youtube-tenaren.</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="471"/>
+        <source>YouTube%2 results for &quot;%1&quot;</source>
+        <translation>YouTube%2 resultat for &quot;%1&quot;</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="468"/>
+        <source>Videos recently featured on YouTube%1</source>
+        <translation type="unfinished"/>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="595"/>
+        <source>No videos found</source>
+        <translation>Fann ingen videoar</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="597"/>
+        <source>No videos found for &quot;%1&quot;</source>
+        <translation>Fann ingen videoar for &quot;%1&quot;</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="675"/>
+        <source>&amp;Play video</source>
+        <translation>&amp;Spel video</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="676"/>
+        <source>&amp;Record video</source>
+        <translation>&amp;Spel inn vdeo</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="677"/>
+        <source>&amp;Watch on YouTube</source>
+        <translation>&amp;Sjå på YouTube</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="678"/>
+        <source>&amp;Copy link</source>
+        <translation>&amp;Kopier lenke</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="233"/>
+        <source>Next</source>
+        <translation>Neste</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="239"/>
+        <source>Previous</source>
+        <translation>Førre</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="762"/>
+        <source>Error</source>
+        <translation>Feil</translation>
+    </message>
+</context>
+</TS>
